# mdoc

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  README.meta.yaml
.github/workflows/: auto_prerelease.yaml  auto_tag_and_release.yaml  autotag.yaml  checks.yaml  prerelease.yaml  release.yaml
asserts/: extras.md  hello.json
misc/filters/: README.md  diagram.lua  include-files.lua
misc/templates/: README.md
src/: mdoc
tools/: generate-release-assets.sh  get-project-version.sh  release.sh  utils.sh
